--- a/trawl-commander.html
+++ b/trawl-commander.html
@@ -23,6 +23,10 @@
         const canvas = document.getElementById("myCanvas");
         const ctx = canvas.getContext("2d");
 
+        var EPSILON     = 1.1102230246251565e-16
+        var ERRBOUND3   = (3.0 + 16.0 * EPSILON) * EPSILON
+        var ERRBOUND4   = (7.0 + 56.0 * EPSILON) * EPSILON
+
         var shipX = canvas.width/2;
         var shipY = 7*canvas.height/8;
         var shipSpeed = 1;
@@ -110,7 +114,7 @@
           simStep(){
             this.x = this.x+this.xSpeed;
             this.y = this.y+this.ySpeed;
-            console.log(this.x+", "+this.y)
+            //console.log(this.x+", "+this.y)
             if((this.x>(canvas.width+100))||(this.x<-100)||(this.y>(canvas.height+100))||(this.y<-100)){
               var side = Math.floor(Math.random()*4);
               if(side == 0){
@@ -170,24 +174,135 @@
             }
         }
 
-        function pointInPolygon(vertices, verticeCount, pointX, pointY) {
-          //A point is in a polygon if a line from the point to infinity crosses the polygon an odd number of times
-          var odd = false;
-          //For each edge (In this case for each point of the polygon and the previous one)
-          var j = verticeCount - 1;
-          for (var i = 0; i < verticeCount; i++) {
-              //If a line from the point into infinity crosses this edge
-              if (((vertices[i][1] > pointY) !== (vertices[j][1] > pointY)) // One point needs to be above, one below our y coordinate
-                  // ...and the edge doesn't cross our Y corrdinate before our x coordinate (but between our x coordinate and infinity)
-                  && (pointX < ((vertices[j][0] - vertices[i][0]) * (pointY - vertices[i][1]) / (vertices[j][1] - vertices[i][1]) + vertices[i][0]))) {
-                  // Invert odd
-                  odd = !odd;
-              }
-              j = i;
+        function orientation3Exact(m0, m1, m2) {
+          var p = sum(sum(prod(m1[1], m2[0]), prod(-m2[1], m1[0])), sum(prod(m0[1], m1[0]), prod(-m1[1], m0[0])))
+          var n = sum(prod(m0[1], m2[0]), prod(-m2[1], m0[0]))
+          var d = sub(p, n)
+          return d[d.length - 1]
+        }
 
+        function orientation3(a, b, c) {
+          var l = (a[1] - c[1]) * (b[0] - c[0])
+          var r = (a[0] - c[0]) * (b[1] - c[1])
+          var det = l - r
+          var s
+          if(l > 0) {
+            if(r <= 0) {
+              return det
+            } else {
+              s = l + r
+            }
+          } else if(l < 0) {
+            if(r >= 0) {
+              return det
+            } else {
+              s = -(l + r)
+            }
+          } else {
+            return det
           }
-          //If the number of crossings was odd, the point is in the polygon
-          return odd;
+          var tol = ERRBOUND3 * s
+          if(det >= tol || det <= -tol) {
+            return det
+          }
+          return orientation3Exact(a, b, c)
+        }
+
+        function robustPointInPolygon(vs, point) {
+          var x = point[0]
+          var y = point[1]
+          var n = vs.length
+          var inside = 1
+          var lim = n
+          for(var i = 0, j = n-1; i<lim; j=i++) {
+            var a = vs[i]
+            var b = vs[j]
+            var yi = a[1]
+            var yj = b[1]
+            if(yj < yi) {
+              if(yj < y && y < yi) {
+                var s = orientation3(a, b, point)
+                if(s === 0) {
+                  return 0
+                } else {
+                  inside ^= (0 < s)|0
+                }
+              } else if(y === yi) {
+                var c = vs[(i+1)%n]
+                var yk = c[1]
+                if(yi < yk) {
+                  var s = orientation3(a, b, point)
+                  if(s === 0) {
+                    return 0
+                  } else {
+                    inside ^= (0 < s)|0
+                  }
+                }
+              }
+            } else if(yi < yj) {
+              if(yi < y && y < yj) {
+                var s = orientation3(a, b, point)
+                if(s === 0) {
+                  return 0
+                } else {
+                  inside ^= (s < 0)|0
+                }
+              } else if(y === yi) {
+                var c = vs[(i+1)%n]
+                var yk = c[1]
+                if(yk < yi) {
+                  var s = orientation3(a, b, point)
+                  if(s === 0) {
+                    return 0
+                  } else {
+                    inside ^= (s < 0)|0
+                  }
+                }
+              }
+            } else if(y === yi) {
+              var x0 = Math.min(a[0], b[0])
+              var x1 = Math.max(a[0], b[0])
+              if(i === 0) {
+                while(j>0) {
+                  var k = (j+n-1)%n
+                  var p = vs[k]
+                  if(p[1] !== y) {
+                    break
+                  }
+                  var px = p[0]
+                  x0 = Math.min(x0, px)
+                  x1 = Math.max(x1, px)
+                  j = k
+                }
+                if(j === 0) {
+                  if(x0 <= x && x <= x1) {
+                    return 0
+                  }
+                  return 1 
+                }
+                lim = j+1
+              }
+              var y0 = vs[(j+n-1)%n][1]
+              while(i+1<lim) {
+                var p = vs[i+1]
+                if(p[1] !== y) {
+                  break
+                }
+                var px = p[0]
+                x0 = Math.min(x0, px)
+                x1 = Math.max(x1, px)
+                i += 1
+              }
+              if(x0 <= x && x <= x1) {
+                return 0
+              }
+              var y1 = vs[(i+1)%n][1]
+              if(x < x0 && (y0 < y !== y1 < y)) {
+                inside ^= 1
+              }
+            }
+          }
+          return 2 * inside - 1
         }
 
         function generateShipVertices(){
@@ -207,15 +322,22 @@
         function iceBergCollisionDetection(iceBerg){
           var shipVertices = generateShipVertices();
           var collision = false;
+          iceBergCurrentVertices = [];
+          for(var i = 0; i < iceBerg.verticesCount; i++){
+            iceBergCurrentVertices[i] = [iceBerg.vertices[i][0]+iceBerg.x, iceBerg.vertices[i][1]+iceBerg.y]
+          }
+
           for(var i = 0; i < 5; i++){
-            collision = pointInPolygon(iceBerg.vertices, iceBerg.verticesCount, shipVertices[i][0], shipVertices[i][1]);
-            if(collision){
+            collision = robustPointInPolygon(iceBergCurrentVertices, shipVertices[i]);
+            console.log(collision);
+            if(collision == -1 || collision == 0){
               return true;
             }
           }
           for(var i = 0; i < iceBerg.verticesCount; i++){
-            collision = pointInPolygon(shipVertices, 5, iceBerg.vertices[i][0], iceBerg.vertices[i][1]);
-            if(collision){
+            collision = robustPointInPolygon(shipVertices, iceBergCurrentVertices[i]);
+            console.log(collision);
+            if(collision == -1 || collision == 0){
               return true;
             }
           }
@@ -494,7 +616,7 @@
             if(detectOutsidePermitZone()){
               drawExitedPermitZone();
             } else {
-
+              drawIceBergCollision();
             }
             drawFinalScore();
             //document.location.reload();
